fixes dark mode size text not readable

--- a/app/components/metatip/metatip.element.css
+++ b/app/components/metatip/metatip.element.css
@@ -109,7 +109,7 @@
   color: var(--theme-icon_color);
 
   & > span {
-    color: hsl(0,0%,20%);
+    color: var(--theme-text_color);
   }
 }
 
